# torch-ihc-segmentation

./: README.md  pyproject.toml
tests/: test_losses.py  test_model.py  test_training.py
torch_ihc_segmentation/: __init__.py  losses.py  lovasz_losses.py  models.py  training.py
torch_ihc_segmentation/data/: augmentation.py  dataloaders.py
