[tool.poetry]
name = "torch_ihc_segmentation"
version = "0.2.0"
description = "Torch implementation of segmentation for IHC images"
authors = ["Jspaezp <jspaezp@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.7"
torch = "^1.8.1"
torchvision = "^0.9.1"
albumentations = "^0.5.2"
pytorch-lightning = "^1.3.2"
tqdm = "^4.60.0"
torchmetrics = "^0.3.2"

[tool.poetry.dev-dependencies]
pydocstyle = "^6.1.1"
black = "^21.5b1"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
